--- a/contour.ipynb
+++ b/contour.ipynb
@@ -7,7 +7,81 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv"
+    "import cv2 as cv\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv.imread('test-540.jpg')\n",
+    "start = time. time()\n",
+    "imgray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "ret, thresh = cv.threshold(imgray, 127, 255, 0)\n",
+    "img2, contours, hierarchy = cv.findContours(thresh, cv.RETR_TREE, cv.CHAIN_APPROX_SIMPLE)\n",
+    "end = time. time()\n",
+    "cv.imwrite( \"./test-contour.jpg\", img2);\n",
+    "print 1/(end-start), \"fps\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1791.10728869 fps\n"
+     ]
+    }
+   ],
+   "source": [
+    "cap = cv.VideoCapture('../test-360.mp4')\n",
+    "i = 0\n",
+    "t = 0.0\n",
+    "TOTAL_NUM_FRAMES = 1000\n",
+    "\n",
+    "while(i < TOTAL_NUM_FRAMES):\n",
+    "    ret, frame = cap.read()\n",
+    "    start = time. time()\n",
+    "    imgray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "    ret, thresh = cv.threshold(imgray, 127, 255, 0)\n",
+    "    end = time. time()\n",
+    "    t += end-start\n",
+    "\n",
+    "    img2, contours, hierarchy = cv.findContours(thresh, cv.RETR_TREE, cv.CHAIN_APPROX_SIMPLE)\n",
+    "    i += 1\n",
+    "    \n",
+    "print TOTAL_NUM_FRAMES/(t), \"fps\"\n",
+    "cap.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv.VideoCapture('../eagle-1.mp4')\n",
+    "\n",
+    "while(cap.isOpened()):\n",
+    "    ret, frame = cap.read()\n",
+    "\n",
+    "    imgray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "    ret, thresh = cv.threshold(imgray, 127, 255, 0)\n",
+    "    img2, contours, hierarchy = cv.findContours(thresh, cv.RETR_TREE, cv.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    cv.imshow('frame',img2)\n",
+    "    if cv.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()"
    ]
   },
   {
